# facilitai-backend

./: Makefile  README.md  poetry.toml  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
src/: config.py  enum.py  main.py  model.py  models.py  routes.py  setup.py
src/conf/: config.py
src/main/: main.py
src/models/: model.py  utils.py
src/routes/: routes.py  utils.py
tests/: conftest.py  helpers.py  test_ad_creation_edit.py  test_ad_interaction.py  test_auth.py  test_main.py
